--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.7.2",
     "react-datalist-input": "^3.2.1",
     "react-dom": "^18.2.0",
+    "react-password-checklist": "^1.4.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
